--- a/iframe-template.html
+++ b/iframe-template.html
@@ -1,20 +1,1 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-  </head>
-  <body>
-      <h1 class="header">This is iframe</h1>
-      <h3>Messages</h3>
-      <div class="message-history" id="message-history">
-        <div class="message">
-          <span>Sender:</span>
-          <span>Message</span>
-        </div>
-      </div>
-      <input type="text" name="message" id="message-text" value="Test">
-      <input type="button" name="send-message" id="send-message" value="Send">
-
-      <script type="text/javascript" src="assets/js/min/frame-template.min.js"></script>
-  </body>
-</html>
+<!DOCTYPE html><html lang="en"><head><meta charset="utf8"><script src="assets/js/min/load-styles.min.js"></script></head><body><nav><div class="nav-wrapper teal"><span class="brand-logo center header">iframe</span></div></nav><div class="message-history" id="message-history"><div class="message"><span> </span><span> </span></div></div><div class="row"><div class="input-field col s12 send-div"><input type="text" name="message" id="message-text" autocomplete="off"><label for="message-text" id="message-text-label">Write a message</label><i class="material-icons prefix send-btn" id="send-message">send</i></div></div><script src="assets/js/min/frame-template.min.js"></script></body></html>
